# perfect-prompt

./: .gitignore  .pre-commit-config.yaml  README.md  flux.py  fluxapi.py  fluxpro.py  perfect_prompt.py  pixtral.py  pyproject.toml  refine.py
.github/workflows/: publish.yml  test.yml
src/perfect_prompt/: cli.py  flux.py  fluxapi.py  generate.py  refine.py
tests/: test_perfect_prompt.py  test_refine.py
