[project]
name = "perfect-prompt"
version = "0.1.0"
description = "Uses a visual LLM to iterate and perfect your image generation prompt."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "huggingface-hub>=0.26.1",
    "llm>=0.17.1",
    "mistral-common[opencv]>=1.4.4",
    "mistral-inference>=1.5.0",
    "torch==2.4.1+cu124",
    "torchaudio==2.4.1+cu124",
    "torchvision==0.19.1+cu124",
    "xformers>=0.0.28.post1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
torchvision = { index = "pytorch" }
xformers = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
